# pro-code

./: .gitignore  COLD-REBUILD.md  COVERAGE.md  README.md  the-map-around-claude-code.html  two-reading-journeys.html  two-reading-journeys.md
codemods/: README.md
doc-patterns/: README.md
doc-patterns/doctrines/: comment-doctrine.md  readme-doctrine.md  test-posture.md
doc-patterns/guides/: cfrs.md  principles.md
doc-patterns/harness/: justfile  log-taxonomy.md
doc-patterns/living-docs/: assumptions.md  backlog.md  current-state.md  decision-record.md
doc-patterns/specs/: functional-analysis.md  surface-spec.md  system-overview.md  ui-sketch.md
examples/: README.md
examples/edge-telemetry-alerting/: .coverage  README.md  justfile  pyproject.toml
examples/edge-telemetry-alerting/config/: station.toml
examples/edge-telemetry-alerting/dashboard/: __init__.py  app.py  index.html  seed.py
examples/edge-telemetry-alerting/docs/: assumptions.md  backlog.md  cfrs.md  current-state.md  functional-analysis.md  open-questions.md  principles.md  system-overview.md  ui-sketches.md
examples/edge-telemetry-alerting/docs/decisions/: 0001-dead-from-boot-staleness.md  0002-lazy-staleness-on-read.md
examples/edge-telemetry-alerting/docs/surfaces/: dashboard.md
examples/edge-telemetry-alerting/engine/: __init__.py  config.py  log.py  models.py  monitor.py  replay.py  severity.py
examples/edge-telemetry-alerting/fixtures/: bearing_overheat.jsonl  dead_from_boot.jsonl  flap.jsonl  low_flow.jsonl  nominal.jsonl  out_of_order.jsonl  overpressure.jsonl  pressure_spike.jsonl  stale_sensor.jsonl
examples/edge-telemetry-alerting/tests/: conftest.py  test_bearing.py  test_config.py  test_dashboard_browser.py  test_debounce.py  test_dedup_and_order.py  test_hysteresis_flap.py  test_logs_grader.py  test_no_missed_critical.py  test_staleness.py  test_state_endpoint.py  test_thresholds.py
examples/jay-z-projects/: .coverage  README.md  pyproject.toml
examples/jay-z-projects/app/: __init__.py  auth.py  config.py  errors.py  log.py  main.py  models.py  store.py
examples/jay-z-projects/codemods/: require_caller_dep.py
examples/jay-z-projects/docs/: assumptions.md  backlog.md  cfrs.md  current-state.md  functional-analysis.md  open-questions.md  principles.md  system-overview.md
examples/jay-z-projects/docs/decisions/: 0001-app-layer-scoping.md  0002-scope-before-role.md
examples/jay-z-projects/docs/surfaces/: projects.md
examples/jay-z-projects/tests/: conftest.py  test_auth.py  test_isolation.py  test_logs_grader.py  test_pagination.py  test_projects.py  test_rbac.py  test_validation.py
examples/multi-tenant-isolation/: .coverage  README.md  pyproject.toml
examples/multi-tenant-isolation/app/: __init__.py  auth.py  config.py  errors.py  log.py  main.py  models.py  store.py
examples/multi-tenant-isolation/codemods/: require_caller_dep.py
examples/multi-tenant-isolation/docs/: assumptions.md  backlog.md  cfrs.md  current-state.md  functional-analysis.md  open-questions.md  principles.md  system-overview.md
examples/multi-tenant-isolation/docs/decisions/: 0001-app-layer-scoping.md  0002-jwt-hs256-tokens.md
examples/multi-tenant-isolation/docs/surfaces/: projects.md
examples/multi-tenant-isolation/tests/: conftest.py  test_auth.py  test_isolation.py  test_logs_grader.py  test_pagination.py  test_projects.py  test_rbac.py  test_validation.py
examples/roselabs-blog/: .dockerignore  README.md  justfile
examples/roselabs-blog/api/: .env.example  .gitignore  pyproject.toml
examples/roselabs-blog/api/alembic/: env.py
examples/roselabs-blog/api/alembic/versions/: 0001_baseline.py  0002_posts.py  0003_comments.py  0004_tags.py  0005_invitations.py
examples/roselabs-blog/api/app/: main.py  seed.py
examples/roselabs-blog/api/app/api/: auth.py  authors.py  comments.py  deps.py  invites.py  posts.py  public.py  rss.py
examples/roselabs-blog/api/app/core/: config.py  db.py  log.py  security.py  slug.py
examples/roselabs-blog/api/app/models/: __init__.py  author.py  comment.py  invitation.py  post.py  tag.py
examples/roselabs-blog/api/app/repositories/: authors.py  comments.py  invitations.py  posts.py  tags.py
examples/roselabs-blog/api/app/schemas/: author.py  comment.py  invitation.py  post.py  public.py
examples/roselabs-blog/api/app/services/: auth.py  comments.py  invitations.py  posts.py  public.py
examples/roselabs-blog/api/tests/: conftest.py  test_auth.py  test_authors_repo.py  test_comments.py  test_invitations.py  test_migration.py  test_posts.py  test_public_visibility.py  test_rss.py  test_tags.py
graders/: browser-grader.md  code-verification-loop.md  coverage.md  dependencies.md  frame-completeness.md  infra-grader.md  plan-completeness.md  profile-completeness.md  security.md
graders/checks/: doctrine_lint.py
profiles/: CONTRACT.md  README.md
profiles/_skeleton/: check-commands.md  frame-profile.md  grader.md  implement-profile.md  personal-profile.md  plan-profile.md
profiles/edge-telemetry/: check-commands.md  frame-profile.md  implement-profile.md  plan-profile.md
profiles/generic-saas/: check-commands.md  frame-profile.md  implement-profile.md  plan-profile.md
(+51 files in other folders)
