[project]
name = "edge-telemetry-alerting"
version = "0.1.0"
description = "Industrial pump-station telemetry monitor + alerting engine (edge-telemetry profile)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "playwright>=1.48",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "browser: end-to-end Playwright test that drives the running dashboard",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
