[project]
name = "edge-telemetry-alerting"
version = "0.1.0"
description = "Industrial edge telemetry monitor + alerting dashboard (edge-telemetry profile)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139",
    "uvicorn>=0.34",
    "pydantic>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "playwright>=1.48",
    "bandit>=1.8",
    "detect-secrets>=1.5",
    "pip-audit>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine", "dashboard"]

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Query", "fastapi.Depends", "Query", "Depends"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = ["browser: drives the running dashboard with Playwright (needs chromium)"]

[tool.coverage.run]
source = ["engine", "dashboard"]
omit = ["dashboard/index.html"]
