[tool.poetry]
name = "multi-tenant-isolation"
version = "0.1.0"
description = "Multi-tenant SaaS Projects API — tenant isolation certified by test (generic-saas profile)"
authors = ["pro-code pipeline"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = "^0.32"
pyjwt = "^2.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
httpx = "^0.27"
ruff = "^0.7"
mypy = "^1.13"
libcst = "^1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
