[project]
name = "roselabs-blog-api"
version = "0.1.0"
description = "roselabs blog — FastAPI (async) backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "argon2-cffi>=23.1",
    "pyjwt>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "testcontainers[postgres]>=4.8",
    "ruff>=0.6",
    "mypy>=1.11",
    "bandit>=1.7",
    "coverage>=7.6",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 90
[tool.ruff.lint]
select = ["E", "F", "I", "B"]
[tool.ruff.lint.per-file-ignores]
"app/seed.py" = ["E501"]  # sample article HTML has intentionally long lines
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends", "fastapi.Query", "fastapi.Header",
    "fastapi.Path", "fastapi.Body", "fastapi.Security",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
markers = ["browser: end-to-end browser tests (Playwright)"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
